fix: adjust scrollbar styles

--- a/src/index.css
+++ b/src/index.css
@@ -379,11 +379,12 @@ a.circle-button:hover {
 .figure:where(.is-table, .is-html) > .figure-body::-webkit-scrollbar {
   inline-size: calc(var(--line-feed) / 2);
   block-size: calc(var(--line-feed) / 2);
-  background-color: var(--gray-8);
 }
 
 .figure:where(.is-table, .is-html) > .figure-body::-webkit-scrollbar-thumb {
+  background-clip: padding-box;
   background-color: var(--gray-10);
+  border: 2px solid transparent;
 }
 
 /* Link  {{{3 */
@@ -460,7 +461,7 @@ a.circle-button:hover {
 .figure-body > pre::-webkit-scrollbar-thumb {
   background-clip: padding-box;
   background-color: var(--gray-8);
-  border: 4px solid transparent;
+  border: 2px solid transparent;
 }
 
 .figure-body > pre > code {
